--- a/wwwroot/css/main.scss
+++ b/wwwroot/css/main.scss
@@ -10,6 +10,22 @@ main {
     margin: 75px 0 0 0;
 }
 
+.loading {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 10vh;
+    font-family: "Mattehek";
+
+    h1 {
+        font-size: clamp(4rem, 10vw, 10rem)
+    }
+
+    p {
+        font-size: clamp(2rem, 5vw, 4rem)
+    }
+}
+
 .bg-red {
     background-color: red;
 }
@@ -35,9 +51,12 @@ main {
 
         img {
             width: 75px;
+            border-radius: 50%;
         }
         h1 {
-            font-size: 30px;
+            margin-left: 10px;
+            margin-bottom: 0;
+            font-size: 25px;
         }
     }
     /*width: 500px;*/
